# neotest-catch2

./: .gitignore  README.md  output.xml  test_xml.lua
lua/neotest-catch2/: catch2_positions.lua  cmake.lua  init.lua  position_parser.lua  result_parser.lua  results.lua  stream_xml.lua  util.lua
sample/: .clang-format  CMakeLists.txt
sample/tests/: CMakeLists.txt  catch2test.hpp  test_1.cpp  test_2.cpp  test_a_really_long_filename_tests_that_may_causes_line_wrap_in_catch2_listing.cpp
